# weather-station-public

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  branding.toml.example  dashboard.html  install.sh  installScriptUbuntu.sh  installWeatherStationUbuntu.sh  weatherAnalysis.js  weatherLogger_Indoor.py  weatherLogger_Outdoor.py  weatherProxy.py  weather_tray.py
dashboard/: app.js  index.html  style.css
server/: pyproject.toml  weather.toml.example
server/fixtures/: basement.json  indoor.json  outdoor.json
server/fixtures/wire_samples/: README.md  indoor_happy.json  outdoor_error.json  outdoor_happy.json  outdoor_nan.json
server/tests/: conftest.py  test_branding.py  test_cache.py  test_config.py  test_db.py  test_derivations_astronomy.py  test_derivations_fused.py  test_derivations_light.py  test_derivations_location.py  test_derivations_readings.py  test_derivations_summary.py  test_endpoints.py  test_external_config.py  test_external_endpoint.py  test_external_providers.py  test_external_task.py  test_gaps.py  test_integration_real_polling.py  test_logger_task.py  test_responses.py  test_schemas.py  test_sensors.py  test_wire_format.py
server/weather_server/: __init__.py  _payload_keys.py  branding.py  cache.py  config.py  db.py  logger_task.py  main.py  responses.py  schemas.py  sensors.py  wire_format.py
server/weather_server/derivations/: astronomy.py  fused.py  light.py  location.py  readings.py  summary.py
server/weather_server/routes/: astronomy.py  branding.py  current.py  external.py  health.py  history.py  sensors.py  summary.py
(+39 files in other folders)
