[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weather-server"
version = "0.1.0"
description = "Jones Big Ass Weather Dashboard — FastAPI server"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "requests>=2.31",
    "timezonefinder>=6.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-requests>=2.31",
]

[project.scripts]
weather-server = "weather_server.main:run"

[tool.hatch.build.targets.wheel]
packages = ["weather_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
